Added link to Homemade Mac and Cheese image

--- a/recipes/hmMacandCheese.html
+++ b/recipes/hmMacandCheese.html
@@ -7,5 +7,8 @@
 
         <body>
             <h1>Homemade Mac and Cheese</h1>
+
+            <img src="images_recipes/hmMacandCheese.webp" alt="Some Tasty Mac and Cheese">
+            
         </body>
     </html>
