Added a descriptive paragraph to hmMacandCheese.html
Added a pro-capitalist paragraph and a humour-filled add on to a second
paragraph. They will need to change by the time I hand in the paragraph
but a separate copy will be made.

--- a/recipes/hmMacandCheese.html
+++ b/recipes/hmMacandCheese.html
@@ -10,5 +10,8 @@
 
             <img src="images_recipes/hmMacandCheese.webp" alt="Some Tasty Mac and Cheese">
             
+                <p>Have you ever desired your Moms homemade Mac and Cheese recipe, but never had the gumption to get off your lazy ass and make the damn thing yourself? Well damn it all you need to get yourself off that couch and make it yourself! This is capitalism you ungrateful nerd, you don't get high quality super cheesy Mac and Cheese by yourself in this sort of economy. Pull yourself up by the straps and get your boots on your hands, because you're about to have the greatest capitalist Mac and Cheese you ever had in your miserable life.</p>
+
+                <p><em>Some terms and conditions apply. Note that Jigidy's website is not responsible for bloating, constipation, lactose intolerance, gluten allergies or other medical conditions you cast aside in the rat race that is the pursuit of happiness. For further assistance, please see a medical professional who can give you the medications you need to eat this meal in exchange for thousands of dollars that you definitely have.</em></p>
         </body>
     </html>
