Added MacandCheese image with proper format.
I added the image hmMacandCheese.jpg to the folder. The filetype was
what changed. Instead of webp it is now .jpg .

--- a/recipes/hmMacandCheese.html
+++ b/recipes/hmMacandCheese.html
@@ -8,7 +8,7 @@
         <body>
             <h1>Homemade Mac and Cheese</h1>
 
-            <img src="" alt="Some Tasty Mac and Cheese">
+            <img src="images_recipes/hmMacandCheese.jpg" alt="Some Tasty Mac and Cheese">
             
                 <p>Have you ever desired your Moms homemade Mac and Cheese recipe, but never had the gumption to get off your lazy ass and make the damn thing yourself? Well damn it all you need to get yourself off that couch and make it yourself! This is capitalism you ungrateful nerd, you don't get high quality super cheesy Mac and Cheese by yourself in this sort of economy. Pull yourself up by the straps and get your boots on your hands, because you're about to have the greatest capitalist Mac and Cheese you ever had in your miserable life.</p>
 
