Added Ingredients List and Description Header
We added the ingredients in an unorganized list and a description header
for our couple paragraph descriptions. Works good!

--- a/recipes/hmMacandCheese.html
+++ b/recipes/hmMacandCheese.html
@@ -9,9 +9,25 @@
             <h1>Homemade Mac and Cheese</h1>
 
             <img src="../images_recipes/hmMacandCheese.jpg" alt="Some Tasty Mac and Cheese">
+
+            <h3>Description</h3>
             
                 <p>Have you ever desired your Moms homemade Mac and Cheese recipe, but never had the gumption to get off your lazy ass and make the damn thing yourself? Well damn it all you need to get yourself off that couch and make it yourself! This is capitalism you ungrateful nerd, you don't get high quality super cheesy Mac and Cheese by yourself in this sort of economy. Pull yourself up by the straps and get your boots on your hands, because you're about to have the greatest capitalist Mac and Cheese you ever had in your miserable life.</p>
 
                 <p><em>Some terms and conditions apply. Note that Jigidy's website is not responsible for bloating, constipation, lactose intolerance, gluten allergies or other medical conditions you cast aside in the rat race that is the pursuit of happiness. For further assistance, please see a medical professional who can give you the medications you need to eat this meal in exchange for hundreds of dollars that you definitely have.</em></p>
+
+                <ul>
+                    <li>1 (16 ounce) package of elbow macaroni</li>
+                    <li>1/2 teaspoon salt</li>
+                    <li>3/4 cup butter, softened - divided</li>
+                    <li>1 cup sour cream</li>
+                    <li>1 tablespoon cream cheese, softened</li>
+                    <li>1 (8 ounce) package shredded sharp Cheddar cheese</li>
+                    <li>1 egg yolk</li>
+                    <li>2 tablespoons all-purpose flour</li>
+                    <li>½ teaspoon ground cayenne pepper</li>
+                    <li>1 cup milk</li>
+                    <li>1 (8 ounce) package shredded mild Cheddar cheese</li>
+                </ul>
         </body>
     </html>
