Added and linked pierogi and sausage image.

--- a/recipes/perogiesandonion.html
+++ b/recipes/perogiesandonion.html
@@ -8,6 +8,6 @@
         <body>
             <h1>Pierogi, Vegan Sausage and Onion</h1>
 
-            <img src="../"
+            <img src="../images_recipes/pierogi_vegansausage_onion.jpg"
         </body>
     </html>
