Added description for perogiesandonion
I have added a description for perogiesandonion.html webpage. It does
not sound as funny and witty as the one for hmMacandCheese.html, so I
will need to ramp this one up before I publish the website to the
internet.

--- a/recipes/perogiesandonion.html
+++ b/recipes/perogiesandonion.html
@@ -8,6 +8,12 @@
         <body>
             <h1>Pierogi, Vegan Sausage and Onion</h1>
 
-            <img src="../images_recipes/pierogi_vegansausage_onion.jpg"
+            <img src="../images_recipes/pierogi_vegansausage_onion.jpg">
+
+            <p>You ever wanted the tastied pierogies you have ever had without needing to also slaughter animals for them. Well your in luck, because ol' Jigidy knows how to do it. The wise man mostly makes his pierogies without meat and may I say they are some of the best pierogies you are going to find. They're also cheap, for all you starving students out there.</p>
+
+            <p><strong>Here is how you make them!</strong></p>
+
+            
         </body>
     </html>
