--- a/recipes/hmMacandCheese.html
+++ b/recipes/hmMacandCheese.html
@@ -2,7 +2,7 @@
     <html lang="en">
         <head>
             <meta charset="utf-8">
-            <title></title>
+            <title>Homemade Mac and Cheese</title>
         </head>
 
         <body>
@@ -29,5 +29,15 @@
                     <li>1 cup milk</li>
                     <li>1 (8 ounce) package shredded mild Cheddar cheese</li>
                 </ul>
+
+                <ol>
+                    <li>First preheat that oven to 375 degrees F. Thats 190 degrees celsius for the rest of the civilized world. DON'T TOUCH IT THATS HOT DUMMY.</li>
+                    <li>Get some friggin pot and get it to a boil. Throw that elbow macaroni in the boiling water and stir it <strong>OCCASIONALLY</strong> until its almost cooked <strong> DON'T OVERDO IT YOU WANKER</strong>. This should take you about 7 minutes. Sprinkle it with the 1/2 teaspoon of salt and 1/2 cup of butter, and then move on with your life.</li>
+                    <li>Slap that 1/4 cup gob of butter, sour cream, cream cheese, sharp cheddar and egg yolk into a bowl and mix it all together. Then spank it with some flour, 1/2 teaspoon more salt, cayenne pepper and milk until you've got it all messed up together.</li>
+                    <li>Spread 1/4 cup of the sour cream mix over the bottom of the prepared baking dish, and dump the rest of it into the pasta. Pour it all over the baking dish you prepared, and then sprinkle some more cheese over it. Then take your cat and have it walk across the dish before you get it. This wasn't in the ingredients list, but if you like cat feet in your food like me then this should be easy for you. <strong>GET 'ER DONE.</strong> </li>
+                    <li>Bake that shit in the oven for about 15 minutes. or 20. Or 10. You think I care?</li>
+                </ol>
+
+                <p><strong>There you go, some damn fine mac & cheese. God I hope you're happy with my choices, I sure as shit ain't.</strong></p>
         </body>
     </html>
