Link added to index.html file, list to
I have added a link to the index.html to the perogiesandonion.html file,
and have also added an ingredients list to that file.

--- a/recipes/perogiesandonion.html
+++ b/recipes/perogiesandonion.html
@@ -14,6 +14,16 @@
 
             <p><strong>Here is how you make them!</strong></p>
 
-            
+            <ul>
+                <li>1 dozen pierogies</li>
+                <li>2 Beyond Meat Sausages</li>
+                <li>Paprika, Cumin and Salt</li>
+                <li>1 Whole Onion</li>
+                <li><strong>Optional: Garlic Clove or two</strong></li>
+            </ul>
+
+            <ol>
+                
+            </ol>
         </body>
     </html>
