--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
 
         <body>
             <h1>Odin Recipes</h1>
-            <a href="recipes/hmMacandCheese.html">Homemade Mac and Cheese</a>
+
+        <ul>
+            <li><a href="recipes/hmMacandCheese.html">Homemade Mac and Cheese</a></li>
+            <li><a href="recipes/perogiesandonion.html">Pierogies, Vegan Sausage and Onion</a></li>
+        </ul>
         </body>
     </html>
