Added a list of instructions to perogiesandonion.html
I've added a list of instructions to the perogiesandonion.html file that
should cook for them just the most excellent perogiesandonion.

--- a/recipes/perogiesandonion.html
+++ b/recipes/perogiesandonion.html
@@ -8,22 +8,31 @@
         <body>
             <h1>Pierogi, Vegan Sausage and Onion</h1>
 
-            <img src="../images_recipes/pierogi_vegansausage_onion.jpg">
+            <img src="../images_recipes/pierogi_vegansausage_onion.jpg" alt="Pierogies, Vegan Sausage and Onion">
 
             <p>You ever wanted the tastied pierogies you have ever had without needing to also slaughter animals for them. Well your in luck, because ol' Jigidy knows how to do it. The wise man mostly makes his pierogies without meat and may I say they are some of the best pierogies you are going to find. They're also cheap, for all you starving students out there.</p>
 
             <p><strong>Here is how you make them!</strong></p>
 
             <ul>
+                <li>Olive Oil, used generously</li>
                 <li>1 dozen pierogies</li>
                 <li>2 Beyond Meat Sausages</li>
                 <li>Paprika, Cumin and Salt</li>
                 <li>1 Whole Onion</li>
                 <li><strong>Optional: Garlic Clove or two</strong></li>
+                
             </ul>
 
             <ol>
-                
+                <li>First, you need to get yourself a pan, smack it onto the oven top and heat it up to a medium.</li>
+                <li>While the pan is heating up, chop up the onion into little cubes. They need to get a head start in order to cook all the way through and be sweet.</li>
+                <li>Put the onions in the pan and add Paprika, Cumin and Salt. Really as long as there are not physical piles of the spices in the pan, you've done it right. Add as much or as little as you want, just don't make it an ocean alright.</li>
+                <li>While cooking up the onions and making sure you're stirring them occasionally, cut up two Beyond Meat Sausages into thick slices, and then set them to the side while you get the pierogies out. I usually make about a dozen pierogies because they're one of those things you can have a dozen of and still not have eaten very many calories.</li>      
+                <li> Once you've given the onions ten minutes or so, add in the sausage and the pierogies and, if you wish, add another round of paprika, cumin and salt. If you want to watch the salt intake I sometimes skip the salt because the pierogies definitely have enough in them to make them taste excellent, but definitely the paprika and cumin again.</li>
+                <li>I find that once you have it all in the pan it only properly takes seven or eight minutes max in order for the pierogies to be done. The pierogies will be softer and chewier. <strong>Pro Tip: If you want the pierogies to be firmer on the outside, cook them in a different pan first, and then add them with everything else.</strong></li>      
             </ol>
+
+            <h2>Enjoy your meal you raging lunatic!</h2>
         </body>
     </html>
