Partially completed ingredients list for jigld.html
Its partially done. I have a bunch of ideas for this recipe but I have
to get out of my house because people are here to remove the furnace
and the power is going to be on and off.

--- a/recipes/jigld.html
+++ b/recipes/jigld.html
@@ -11,5 +11,20 @@
             <h3>HEY YOU. YOU EVER FELT LIKE A LAZY BUTT FOR THE DAY AND WAS LIKE "Damn, think I should just grab stuff from the convienence store today." WELL YOUR IN LUCK. JIGIDY HAS REGULAR LAZY DAYS, AND YOU SHOULD ASPIRE TO BE LIKE HIM! LETS FUCKING GO.</h3>
 
             <p>You think your so clever, with your salads and avocado toast and vegan sausages, but haven't you ever just wanted to slap yourself onto a chair with a canister of pringles, pepperete sticks and pizza pockets? I know I sure as shit do, so I'm going to teach you to have the laziest day on the planet you can possibly imagine, because yes its bad for your body but its good for <strong> YOUR SOUL BITCH</strong>. Lets Go!</p>
+
+            <p>But wait, I hear you ask. If you wanted to be lazy, why not just get a bag of doritos and be done with it. What are you some second-rate scrub? You just want doritos? No, we here at Jigidy Incorporated TM C R do laziness in style. No doritos. You gotta mix it up, get your laziness in style and class. Don't be a scrub, be...exceptional. Be lazily exceptional!</p>
+
+            <h4>The Possibilities!</h4>
+
+            <ul>
+                <li>Cannister of Pringles. Any Pringles you want!</li>
+                <li>A loaf of bread and some sandwich meat</li>
+                <li>At least five crappy pepperette sticks the cornerstore keeps on the counter.</li>
+                <li>A metric fuck tonne of pizza pockets. Like just too many. I expect you to get at least two boxes.</li>
+                <li>A diet soda. Never non-diet. You </li>
+                <li>Ben and Jerry's. Whatever flavour you want, but at least 1 container of Ben and Jerry's/</li>
+                <li></li>
+
+            </ul>
         </body>
     </html>
