Finished jigld lazy day ingredients list
We finished the list for the lazy day, and we moved forward to creating
the steps necessary to do the lazy day.

--- a/recipes/jigld.html
+++ b/recipes/jigld.html
@@ -21,10 +21,16 @@
                 <li>A loaf of bread and some sandwich meat</li>
                 <li>At least five crappy pepperette sticks the cornerstore keeps on the counter.</li>
                 <li>A metric fuck tonne of pizza pockets. Like just too many. I expect you to get at least two boxes.</li>
-                <li>A diet soda. Never non-diet. You </li>
+                <li>A diet soda. Never non-diet. You want the diabetus? </li>
                 <li>Ben and Jerry's. Whatever flavour you want, but at least 1 container of Ben and Jerry's/</li>
-                <li></li>
-
+                <li>At least three protein bars, preferably the thick and girthy ones!</li>
+                <li>Ocassionally, a bag of pretzals. VERY Ocassionally.</li>
             </ul>
+
+            <p>Remember, these are just possibilities. You don't need to get ALL of them at once, and if you did you would probably die. Nonetheless, I have, and I am still alive in body (not spirit) so do what you wish I suppose.</p>
+
+            <ol>
+                <li>Walk to your local grocery store. </li>
+            </ol>
         </body>
     </html>
