Completed rough copy of the recipe project
With adding the steps and the flavour text of each recipe, all we need
to do is grab a picture for junk food and then edit stuff, add links
back to the index.html, and get rid of the swear words because I just
realized like 5 minutes ago that this will probably be displayed for
a time and I probably should not have too many swear words in it.

--- a/recipes/jigld.html
+++ b/recipes/jigld.html
@@ -15,7 +15,7 @@
             <p>But wait, I hear you ask. If you wanted to be lazy, why not just get a bag of doritos and be done with it. What are you some second-rate scrub? You just want doritos? No, we here at Jigidy Incorporated TM C R do laziness in style. No doritos. You gotta mix it up, get your laziness in style and class. Don't be a scrub, be...exceptional. Be lazily exceptional!</p>
 
             <h4>The Possibilities!</h4>
-
+<!-- This list requires work. It is not funny enough. Its spelt bad. Make it funnier, don't be a puss.-->
             <ul>
                 <li>Cannister of Pringles. Any Pringles you want!</li>
                 <li>A loaf of bread and some sandwich meat</li>
@@ -25,12 +25,19 @@
                 <li>Ben and Jerry's. Whatever flavour you want, but at least 1 container of Ben and Jerry's/</li>
                 <li>At least three protein bars, preferably the thick and girthy ones!</li>
                 <li>Ocassionally, a bag of pretzals. VERY Ocassionally.</li>
+                <li>Pop tarts, never cooked in the toaster always eaten cold.</li>
             </ul>
 
             <p>Remember, these are just possibilities. You don't need to get ALL of them at once, and if you did you would probably die. Nonetheless, I have, and I am still alive in body (not spirit) so do what you wish I suppose.</p>
 
             <ol>
-                <li>Walk to your local grocery store. </li>
+                <li>Walk to your local cornerstore. </li>
+                <li>Walk into the cornerstore with pride and bravado.<strong>Don't be a wuss, get the fuck in there and buy unhealthy things!</strong></li>
+                <li>Grab any number of items from the top list. </li>
+                <li>Buy them.</li>
+                <li>Go home, sit in front of your god-tier technology, and just fucking eat'em.</li>
             </ol>
+
+            <p><strong>Congratualations! You have completed the Lazy Day, created by Jigidy. Have more lazy days! Eat junk food! Be the slob you've always wanted to be on the inside!</strong></p>
         </body>
     </html>
