Added link to jigld.html
Added a link on the index.html page to the jigld.html page.

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         <ul>
             <li><a href="recipes/hmMacandCheese.html">Homemade Mac and Cheese</a></li>
             <li><a href="recipes/perogiesandonion.html">Pierogies, Vegan Sausage and Onion</a></li>
+            <li><a href="recipes/jigld.html">Jigidy's Lazy Day</a></li>
         </ul>
         </body>
     </html>
