--- a/recipes/jigld.html
+++ b/recipes/jigld.html
@@ -7,8 +7,10 @@
 
         <body>
             <h1>Jigidy's Lazy Day</h1>
+            
+            <img src="../images_recipes/jigld.jpg" alt="Jigidy's Lazy Day. Man shown in picture is only Jigidy in spirit, not in body">
 
-            <h3>HEY YOU. YOU EVER FELT LIKE A LAZY BUTT FOR THE DAY AND WAS LIKE "Damn, think I should just grab stuff from the convienence store today." WELL YOUR IN LUCK. JIGIDY HAS REGULAR LAZY DAYS, AND YOU SHOULD ASPIRE TO BE LIKE HIM! LETS FUCKING GO.</h3>
+            <p>HEY YOU. YOU EVER FELT LIKE A LAZY BUTT FOR THE DAY AND WAS LIKE "Damn, think I should just grab stuff from the convienence store today." WELL YOUR IN LUCK. JIGIDY HAS REGULAR LAZY DAYS, AND YOU SHOULD ASPIRE TO BE LIKE HIM! LETS FUCKING GO.</p>
 
             <p>You think your so clever, with your salads and avocado toast and vegan sausages, but haven't you ever just wanted to slap yourself onto a chair with a canister of pringles, pepperete sticks and pizza pockets? I know I sure as shit do, so I'm going to teach you to have the laziest day on the planet you can possibly imagine, because yes its bad for your body but its good for <strong> YOUR SOUL BITCH</strong>. Lets Go!</p>
 
