Centred title and header
I centred the title and header, although I have specifically failed to
centre the image so I'm not going to be a perfectionist I'm just
going to move on.

--- a/recipes/hmMacandCheese.html
+++ b/recipes/hmMacandCheese.html
@@ -6,11 +6,11 @@
         </head>
 
         <body>
-            <h1>Homemade Mac and Cheese</h1>
+            <h1 style="text-align: center;">Homemade Mac and Cheese</h1>
 
             <img src="../images_recipes/hmMacandCheese.jpg" alt="Some Tasty Mac and Cheese">
 
-            <h3>Description</h3>
+            <h3 style="text-align: center;">Description</h3>
             
                 <p>Have you ever desired your Moms homemade Mac and Cheese recipe, but never had the gumption to get off your lazy ass and make the damn thing yourself? Well damn it all you need to get yourself off that couch and make it yourself! This is capitalism you ungrateful nerd, you don't get high quality super cheesy Mac and Cheese by yourself in this sort of economy. Pull yourself up by the straps and get your boots on your hands, because you're about to have the greatest capitalist Mac and Cheese you ever had in your miserable life.</p>
 
