Editing/Indenting Finished, provided homepage link
I have finished editing and indenting this page, and to my great delight
I was able to create a link back to the homepage!

"Drunkenly stumble your way back to the homepage". I love it.

--- a/recipes/hmMacandCheese.html
+++ b/recipes/hmMacandCheese.html
@@ -31,13 +31,15 @@
                 </ul>
 
                 <ol>
-                    <li>First preheat that oven to 375 degrees F. Thats 190 degrees celsius for the rest of the civilized world. DON'T TOUCH IT THATS HOT DUMMY.</li>
-                    <li>Get some friggin pot and get it to a boil. Throw that elbow macaroni in the boiling water and stir it <strong>OCCASIONALLY</strong> until its almost cooked <strong> DON'T OVERDO IT YOU WANKER</strong>. This should take you about 7 minutes. Sprinkle it with the 1/2 teaspoon of salt and 1/2 cup of butter, and then move on with your life.</li>
+                    <li>First preheat that oven to 375 degrees F. Thats 190 degrees celsius for the rest of the civilized world. Remember: stove tops are ... hot.</li>
+                    <li>Get some pot and get it to a boil (the metal container, not pot). Throw that elbow macaroni in the boiling water and stir it <strong>OCCASIONALLY</strong> until its almost cooked. <strong>Don't over do it</strong>! This should take you about 7 minutes. Sprinkle it with the 1/2 teaspoon of salt and 1/2 cup of butter, and then move on with your life.</li>
                     <li>Slap that 1/4 cup gob of butter, sour cream, cream cheese, sharp cheddar and egg yolk into a bowl and mix it all together. Then spank it with some flour, 1/2 teaspoon more salt, cayenne pepper and milk until you've got it all messed up together.</li>
-                    <li>Spread 1/4 cup of the sour cream mix over the bottom of the prepared baking dish, and dump the rest of it into the pasta. Pour it all over the baking dish you prepared, and then sprinkle some more cheese over it. Then take your cat and have it walk across the dish before you get it. This wasn't in the ingredients list, but if you like cat feet in your food like me then this should be easy for you. <strong>GET 'ER DONE.</strong> </li>
-                    <li>Bake that shit in the oven for about 15 minutes. or 20. Or 10. You think I care?</li>
+                    <li>Spread 1/4 cup of the sour cream mix over the bottom of the prepared baking dish, and dump the rest of it into the pasta. Pour it all over the baking dish you prepared, and then sprinkle some more cheese over it. Then take your cat and have it walk across the dish before you get it. This wasn't in the ingredients list, but if you like cat feet in your food like me then this should be easy for you. </li>
+                    <li>Bake it in the oven for about 15 minutes. or 20. Or 30. You think I care? Burn your house down for all the damns I give.</li>
                 </ol>
 
-                <p><strong>There you go, some damn fine mac & cheese. God I hope you're happy with my choices, I sure as shit ain't.</strong></p>
+                <p><strong>There you go, some damn fine mac & cheese. I hope you're happy with my choices. I ain't. I went with 45 minutes, and now I don't have a house.</strong></p>
+
+                <a href="../index.html">Drunkenly stumble your way back to the homepage</a>
         </body>
     </html>
