Added link back to homepage
Its a link. Its back to the homepage.

--- a/recipes/perogiesandonion.html
+++ b/recipes/perogiesandonion.html
@@ -34,5 +34,7 @@
             </ol>
 
             <h2>Enjoy your meal you raging lunatic!</h2>
+
+            <a href="../index.html">Burn a trail all the way back to the hompage</a>
         </body>
     </html>
