Added homepage link and edited page
We took out some cusses and added a homepage link.

--- a/recipes/jigld.html
+++ b/recipes/jigld.html
@@ -10,36 +10,38 @@
             
             <img src="../images_recipes/jigld.jpg" alt="Jigidy's Lazy Day. Man shown in picture is only Jigidy in spirit, not in body">
 
-            <p>HEY YOU. YOU EVER FELT LIKE A LAZY BUTT FOR THE DAY AND WAS LIKE "Damn, think I should just grab stuff from the convienence store today." WELL YOUR IN LUCK. JIGIDY HAS REGULAR LAZY DAYS, AND YOU SHOULD ASPIRE TO BE LIKE HIM! LETS FUCKING GO.</p>
+            <p>Hey you! You ever woke up one day and been like "You know, today seems like the day to have a lazy day. Should probably just grab some stuff from the convenience store today"? Well your in luck! Jigidy has regular lazy days, and so should you! Be more like Jigidy, and have lazy days!</p>
 
-            <p>You think your so clever, with your salads and avocado toast and vegan sausages, but haven't you ever just wanted to slap yourself onto a chair with a canister of pringles, pepperete sticks and pizza pockets? I know I sure as shit do, so I'm going to teach you to have the laziest day on the planet you can possibly imagine, because yes its bad for your body but its good for <strong> YOUR SOUL BITCH</strong>. Lets Go!</p>
+            <p>Whats that? You want to be healthier? Bah! You think you're so clever, with your salads and avocado toast and vegan sausages, but haven't you ever just wanted to slap yourself onto a chair with a canister of pringles, pepperete sticks and pizza pockets? I know I sure do so I'm going to teach you to have the laziest day on the planet you can possibly imagine, because yes its bad for your body but its good for <strong> YOUR SOUL</strong>. Lets Go!</p>
 
             <p>But wait, I hear you ask. If you wanted to be lazy, why not just get a bag of doritos and be done with it. What are you some second-rate scrub? You just want doritos? No, we here at Jigidy Incorporated TM C R do laziness in style. No doritos. You gotta mix it up, get your laziness in style and class. Don't be a scrub, be...exceptional. Be lazily exceptional!</p>
 
             <h4>The Possibilities!</h4>
-<!-- This list requires work. It is not funny enough. Its spelt bad. Make it funnier, don't be a puss.-->
+
             <ul>
-                <li>Cannister of Pringles. Any Pringles you want!</li>
+                <li>Canister of pringles. Any pringles you want!</li>
                 <li>A loaf of bread and some sandwich meat</li>
-                <li>At least five crappy pepperette sticks the cornerstore keeps on the counter.</li>
-                <li>A metric fuck tonne of pizza pockets. Like just too many. I expect you to get at least two boxes.</li>
+                <li>At least five crappy pepperette sticks the corner store keeps on the counter.</li>
+                <li>A metric tonne of pizza pockets. Like just too many. I expect you to get at least two boxes.</li>
                 <li>A diet soda. Never non-diet. You want the diabetus? </li>
                 <li>Ben and Jerry's. Whatever flavour you want, but at least 1 container of Ben and Jerry's/</li>
                 <li>At least three protein bars, preferably the thick and girthy ones!</li>
-                <li>Ocassionally, a bag of pretzals. VERY Ocassionally.</li>
+                <li>Occasionally, a bag of pretzels. VERY Occasionally.</li>
                 <li>Pop tarts, never cooked in the toaster always eaten cold.</li>
             </ul>
 
             <p>Remember, these are just possibilities. You don't need to get ALL of them at once, and if you did you would probably die. Nonetheless, I have, and I am still alive in body (not spirit) so do what you wish I suppose.</p>
 
             <ol>
-                <li>Walk to your local cornerstore. </li>
-                <li>Walk into the cornerstore with pride and bravado.<strong>Don't be a wuss, get the fuck in there and buy unhealthy things!</strong></li>
+                <li>Walk to your local corner store. </li>
+                <li>Walk into the corner store with pride and bravado.<strong>Don't be a wuss, get in there and buy unhealthy things!</strong></li>
                 <li>Grab any number of items from the top list. </li>
                 <li>Buy them.</li>
-                <li>Go home, sit in front of your god-tier technology, and just fucking eat'em.</li>
+                <li>Go home, sit in front of your god-tier technology, and just eat'em.</li>
             </ol>
 
-            <p><strong>Congratualations! You have completed the Lazy Day, created by Jigidy. Have more lazy days! Eat junk food! Be the slob you've always wanted to be on the inside!</strong></p>
+            <p><strong>Congratulations! You have completed the Lazy Day, created by Jigidy. Have more lazy days! Eat junk food! Be the slob you've always wanted to be on the inside!</strong></p>
+
+            <a href="../index.html">Roll on the floor back to the homepage</a>
         </body>
     </html>
