--- a/index.html
+++ b/index.html
@@ -3,10 +3,26 @@
         <head>
             <meta charset="utf-8">
             <title></title>
+            <style>
+                div {
+                    width: 400px;
+                    height: auto;
+                    text-align: center;
+                }
+
+                .center {
+                    display: block;
+                    margin-left: auto;
+                    margin-right: auto;
+                    width: 40%;
+                }
+            </style>
         </head>
 
         <body>
             <h1 style="text-align: center;">Odin Recipes</h1>
+
+            <img src="../odin-recipes/images_recipes/skullwithcigsmall.jpg" width="350" height="500" alt="Jigidy's Icon: Van Goghs Skull with a Cigarette" class="center">
 
             <h3 style="text-align: center;">The Programming Ethos of Laziness, Now with Food!</h3>
 
