Tabbing paragraphs, edited image widths
Also, perogiesandonion.html is completely done, ready for shipping.

--- a/recipes/jigld.html
+++ b/recipes/jigld.html
@@ -3,12 +3,26 @@
         <head>
             <meta charset="utf-8">
             <title>Jigidy's Lazy Day</title>
+            <style>
+                div {
+                    width: 400px;
+                    height: auto;
+                    text-align: center;
+                }
+
+                .center {
+                    display: block;
+                    margin-left: auto;
+                    margin-right: auto;
+                    width: 40%;
+                }
+            </style>
         </head>
 
         <body>
             <h1>Jigidy's Lazy Day</h1>
             
-            <img src="../images_recipes/jigld.jpg" alt="Jigidy's Lazy Day. Man shown in picture is only Jigidy in spirit, not in body">
+            <img src="../images_recipes/jigld.jpg" width="350" height="500" alt="Jigidy's Lazy Day. Man shown in picture is only Jigidy in spirit, not in body" class="center">
 
             <p>Hey you! You ever woke up one day and been like "You know, today seems like the day to have a lazy day. Should probably just grab some stuff from the convenience store today"? Well your in luck! Jigidy has regular lazy days, and so should you! Be more like Jigidy, and have lazy days!</p>
 
