--- a/recipes/hmMacandCheese.html
+++ b/recipes/hmMacandCheese.html
@@ -3,12 +3,26 @@
         <head>
             <meta charset="utf-8">
             <title>Homemade Mac and Cheese</title>
+            <style>
+                div {
+                    width: 400px;
+                    height: auto;
+                    text-align: center;
+                }
+
+                .center {
+                    display: block;
+                    margin-left: auto;
+                    margin-right: auto;
+                    width: 40%;
+                }
+            </style>
         </head>
 
         <body>
             <h1 style="text-align: center;">Homemade Mac and Cheese</h1>
 
-            <img src="../images_recipes/hmMacandCheese.jpg" alt="Some Tasty Mac and Cheese">
+            <img src="../images_recipes/hmMacandCheese.jpg" width="350" height="500" alt="Some Tasty Mac and Cheese" class="center">
 
             <h3 style="text-align: center;">Description</h3>
             
